fix(FocusReminder): stretch the component over the whole 'TypingBox'

--- a/frontend/src/components/typing-box/focus-reminder/FocusReminder.scss
+++ b/frontend/src/components/typing-box/focus-reminder/FocusReminder.scss
@@ -6,6 +6,7 @@
   color: white;
   z-index: 10;
   height: global.$line-height * global.$line-number;
+  width: 100%;
   display: flex;
   text-align: center;
   justify-content: center;
